syntax = "proto3";

message IdParams {
    string id = 1;
}

message IdParamsList {
    repeated string ids = 1;
}