syntax = "proto3";

message QueryParamsUsers {
    optional int32 limit = 1;
    optional int32 page = 2;
}